<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0fbf0">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/iv_movie_details_poster"
            android:layout_width="166dp"
            android:layout_height="250dp"
            android:contentDescription="@string/movie_poster"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tv_movie_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_details_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_movie_title_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/tv_movie_title_label"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_details_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_release_date_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/tv_release_date_label"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_vote_average_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vote_average_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_details_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_vote_average_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/tv_vote_average_label"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_plot_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/plot_synopsis_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_details_poster" />

        <TextView
            android:id="@+id/tv_plot_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_plot_synopsis_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@id/tv_plot_synopsis_label" />
        
        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailers_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_plot_synopsis"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_trailers_label" />

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviews_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_trailers_list"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews_label" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>